# pytop

./: .gitignore  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20191009_1919.py
client/: index.html
monitor/: apps.py  jobs.py
pytop/: settings.py  urls.py  wsgi.py
pytop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
